assets/style/travel.css
/*Travel styling*/

#travelDestinations {
    display: flex;
    flex-direction: row;
    min-height: 600px;
    flex-wrap: wrap;
    margin-left: 10%;
    margin-right: 10%;
    justify-content: space-between;
    background-color: white;


}
#travelDestinations p {
    font-size: 13px;
    font-family: Arial, serif;
}

.travelDestination {
    height: 500px;
    width: 300px;
    margin-top: 5%;

}

.cities {
    width: 90%;
    border-radius: 5px;
    transition: all 0.3s ease-in-out;
    -webkit-box-shadow: -1px 3px 25px -2px rgba(0,0,0,0.54);
    -moz-box-shadow: -1px 3px 25px -2px rgba(0,0,0,0.54);
    box-shadow: -1px 3px 25px -2px rgba(0,0,0,0.54);

}

.cities:hover {
    width: 100%;
}



.cityHeader{
    font-family: Arial, serif;
    font-size: 25px;
}



@media screen and (max-width: 780px) {
    .top-left-content {
        display: none;
    }

    #travelDestinations {
        flex-direction: column;
    }
    .travelDestination {
        width: 100%;
    }
    .cities {
        width: 70%;
    }
    .cities:hover {
        width:70%;
    }
}

